# LeetCodeDailyProblems

./: .gitignore  CMakeLists.txt  README.md  utils.h
lib/docs/reference/: testing.md
lib/googlemock/include/gmock/: gmock-actions.h  gmock-matchers.h
lib/googlemock/include/gmock/internal/: gmock-internal-utils.h
lib/googlemock/src/: gmock-matchers.cc
lib/googlemock/test/: gmock-actions_test.cc  gmock-matchers-comparisons_test.cc  gmock-matchers-containers_test.cc  gmock-spec-builders_test.cc
lib/googletest/include/gtest/: gtest.h
lib/googletest/src/: gtest-port.cc  gtest.cc
lib/googletest/test/: gtest_environment_test.cc  gtest_repeat_test.cc  gtest_unittest.cc
src/: 2KeysKeyboard_650.cpp  AllAncestorsOfNodeInDirectedAcyclicGraph_2192.cpp  AppendCharactersToStringToMakeSubsequence_2486.cpp  AverageWaitingTime_1701.cpp  BalanceBinarySearchTree_1382.cpp  BinarySearchTreeToGreaterSumTree_1038.cpp  BinaryTreePostorderTraversal_145.cpp  BuildMatrixWithConditions_2392.cpp  CombinationSumII_40.cpp  ContinuousSubarraySum_523.cpp  Convert1DArrayInto2DArray_2022.cpp  CountNumberOfNiceSubarrays_1248.cpp  CountNumberOfTeams_1395.cpp  CountSubIslands_1905.cpp  CountTheNumberOfConsistentStrings_1684.cpp  CountTripletsThatCanFormTwoArraysOfEqualXOR_1442.cpp  CrawlerLogFolder_1598.cpp  CreateBinaryTreeFromDescriptions_2196.cpp  DeleteLeavesWithGivenValue_1325.cpp  DeleteNodesAndReturnForest_1110.cpp  DeleteNodesFromLinkedListPresentInArray_3217.cpp  DistributeCoinsInBinaryTree_979.cpp  EvaluateBooleanBinaryTree_2331.cpp  FillingBookcaseShelves_1105.cpp  FindCenterOfStarGraph_1791.cpp  FindCityWithSmallestNumberOfNeighboursAtThresholdDistance_1334.cpp  FindCommonCharacters_1002.cpp  FindKthSmallestPairDistance_719.cpp  FindMaximumSumOfNodeValues_3068.cpp  FindMinimumAndMaximumNumberOfNodesBetweenCriticalPoints_2058.cpp  FindMissingObservations_2028.cpp  FindTheClosestPalindrome_564.cpp  FindTheLongestSubstringContainingVowelsInEvenCounts_1371.cpp  FindTheStudentThatWillReplaceTheChalk_1894.cpp  FindTheWinnerOfTheCircularGame_1823.cpp  FindValidMatrixGivenRowAndColumnSums_1605.cpp  FractionAdditionAndSubtraction_592.cpp  GetEqualSubstringsWithinBudget_1208.cpp  GrumpyBookstoreOwner_1052.cpp  HandOfStraights_846.cpp  (+92 more)
